# go-api

./: .dockerignore  .env-sample  .env-spark  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  CHANGELOG.md  DO.csv  Dockerfile  Health Services Mapping Table B.csv  LOGS.md  Population.GO.Admin1.Matched.xlsx  README.md  TESTING.md  Validated Local Units Second Batch.csv  Validated.Local.Units.Batch1.30112023.csv  azure-pipelines.yml  capacity.xlsx  docker-compose-prod.yml  docker-compose-worker.yml  docker-compose.yml  manage.py  openapi-schema.yaml  playwright.Dockerfile  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  sshd_config  test
.circleci/: config.yml
.github/: docker-compose.yml  go-api-artifacts-add-or-replace.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_epic_request.yml
.github/workflows/: add-issue-to-backlog.yml  black.yml  build-publish-docker-helm.yaml  build-publish-docker-helm.yml  chartpress.yml  ci.yaml  ci.yml  flake8.yml
alert_system/: admin.py  apps.py  dev_views.py  email_processing.py  extraction.py  factories.py  helpers.py  mappings.py  models.py  tasks.py  tests.py  utils.py
alert_system/extraction/: base_extraction.py  gdacs_cyclone.py  gdacs_flood.py  usgs_earthquake.py
alert_system/filters/: base_filter.py  gdacs_cyclone.py  gdacs_flood.py  usgs_earthquake.py
alert_system/migrations/: 0001_initial.py  0002_alertemailthread_alertemaillog_and_more.py  0002_alter_connector_options.py  0002_alter_loaditem_end_datetime.py  0002_alter_loaditem_related_go_events_emailalertlog.py  0003_alter_connector_options.py  (+10 more)
api/: admin.py  admin_classes.py  admin_reports.py  apps.py  authentication.py  authentication_backend.py  authorization.py  country_distance.py  create_cron.py  customs_ai_service.py  customs_data_loader.py  customs_spark_views.py  data_transformation_framework_agreement.py  data_transformation_stock_inventory.py  dataloaders.py  drf_views.py  enums.py  esaliashelper.py  esconnection.py  event_sources.py  exceptions.py  export_ai_service.py  fabric_import_map.py  fabric_sql.py  filehandler.py  filter_set.py  filters.py  forms.py  framework_agreement_views.py  indexes.py  logger.py  models.py  molnix_utils.py  mutations.py  orders.py  playwright.py  pro_bono_views.py  public_resource.py  queries.py  receivers.py  (+27 more)
auth/: models.py
country_plan/: admin.py  apps.py  drf_views.py  factories.py  models.py  serializers.py  tasks.py
data/: Countries.csv  IFRC_Customs_Data.xlsx  ProBono.csv  actions_snapshot.json  mailpit.db-shm  mailpit.db-wal  old-disaster-types.json
databank/: admin.py  apps.py  enums.py  filter_set.py  forms.py  models.py  serializers.py  views.py
deploy/: Dockerfile  custom-role.json  docker-compose.yml
deployments/: __init__.py  admin.py  apps.py  drf_views.py  enums.py  filters.py  forms.py  models.py  permissions.py  resources.py  search_indexes.py  serializers.py  t_ests.py  test.py  test_migrations.py  test_views.py  tests.py  translation.py  utils.py  views.py  widgets.py
docs/: SPARK.md  git-lfs.md  go-artifacts.md  go-sso.md  playwright-exports.md
dref/: admin.py  apps.py  assessment_utils.py  common_utils.py  enums.py  filter_set.py  imminent_utils.py  models.py  permissions.py  receivers.py  scripts.py  search_indexes.py  serializers.py  tasks.py  test_dref3_filters.py  test_views.py  translation.py  utils.py  views.py
eap/: admin.py  apps.py  dev_views.py  enums.py  factories.py  filter_set.py  models.py  permissions.py  serializers.py  tasks.py  test_views.py  utils.py  views.py
flash_update/: admin.py  apps.py  enums.py  factories.py  filter_set.py  forms.py  models.py  search_indexes.py  serializers.py  tasks.py  test_views.py  translation.py  utils.py  views.py
informal_update/: __init__.py  admin.py  apps.py  enums.py  filter_set.py  forms.py  models.py  serializers.py  signals.py  test_views.py  translation.py  utils.py  views.py  writable_nested_serializers.py
lang/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  translation.py  views.py
local_units/: admin.py  apps.py  bulk_upload.py  dev_views.py  enums.py  export.py  filterset.py  models.py  permissions.py  serializers.py  tasks.py  test_views.py  utils.py  views.py
main/: __init__.py  autocomplete.sh  celery.py  checks.py  context.py  context_processors.py  dataloaders.py  entrypoint.sh  enums.py  error_codes.py  errors.py  exception_handler.py  factories.py  fields.py  filters.py  frontend.py  gqpermissions.py  k8s_runserver.sh  lock.py  managers.py  mock.py  nginx.conf  oauth2.py  permissions.py  runserver.sh  schema.py  secret_settings.template.py  sentry.py  sentry_monitor.py  serializers.py  settings-test.py  settings.py  sites_patch  suspend_receivers.py  test_case.py  test_fake.py  translate.py  translation.py  urls.py  utils.py  (+3 more)
mapbox/: countries-recipe-staging.json  countries-recipe.json  country-centroids-recipe-staging.json  country-centroids-recipe.json  district-centroids-recipe-staging.json  district-centroids-recipe.json  districts-recipe-staging.json  districts-recipe.json  utils.py
middlewares/: cache.py  middlewares.py
notifications/: admin.py  apps.py  drf_views.py  enums.py  factories.py  filter_set.py  hello.py  models.py  notification.py  resources.py  search_indexes.py  serializers.py  tests.py  translation.py  views.py
per/: admin.py  admin_classes.py  apps.py  cache.py  custom_renderers.py  drf_views.py  enums.py  factories.py  filter_set.py  models.py  ops_learning_summary.py  permissions.py  questions_data.py  serializers.py  task.py  test_views.py  translation.py  utils.py  validators.py  views.py
registrations/: admin.py  apps.py  drf_views.py  models.py  serializers.py  tasks.py  test_views.py  utils.py  views.py
utils/: common.py  elasticsearch.py  enums.py  erp.py  file_check.py  mutations.py  paginations.py  serializers.py  test_utils.py  transformers.py  types.py
w3/: apps.py  drf_views.py  models.py  serializers.py  test_views.py  views.py
(+1904 files in other folders)
